--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 
 <body>
     <main>
-        <h1>ICC WorldCup 2023</h1>
-        <h2>Most Runs</h2>
+        <h1>Cricket Records</h1>
+        <h2>Most Centuries</h2>
         <form action="" autocomplete="on">
             <input type="text" id="FirstName" placeholder="First Name">
             <input type="text" id="lastName" placeholder="Last Name">
             <input type="text" id="country" placeholder="Country">
-            <input type="number" id="score" placeholder="Player Score" min="0">
+            <input type="number" id="score" placeholder="Centuries" min="0">
             <button class="addPlayer">Add Player</button>
         </form>
         <p class="errorMessage">All fields are required*</p>
         <div class="scoreBoard-container">
             <div class="scoreboard">
                 <div>
-                    <p class="playerName">Rohit Sharma</p>
-                    <p class="main-time">Oct 21, 2023, 21:35:01</p>
+                    <p class="playerName">Sachine Tendulkar</p>
+                    <p class="main-time">Jan 21, 2024, 21:35:01</p>
                 </div>
-                <p class="player-country">India</p>
-                <p class="player-score">265</p>
+                <p class="player-country">IND</p>
+                <p class="player-score">100</p>
                 <div class="scoreboard-btn-container">
                     <button>+5</button>
                     <button>-5</button><button>❌</button>
@@ -38,10 +38,10 @@
             <div class="scoreboard">
                 <div>
                     <p class="playerName">Virat Kohli</p>
-                    <p class="main-time">Oct 21, 2023, 22:05:35</p>
+                    <p class="main-time">Jan 21, 2024, 22:05:35</p>
                 </div>
-                <p class="player-country">India</p>
-                <p class="player-score">259</p>
+                <p class="player-country">IND</p>
+                <p class="player-score">80</p>
                 <div class="scoreboard-btn-container">
 
                     <button>+5</button>
@@ -50,11 +50,11 @@
             </div>
             <div class="scoreboard">
                 <div>
-                    <p class="playerName">Devon Conway</p>
-                    <p class="main-time">Oct 21, 2023, 22:15:35</p>
+                    <p class="playerName">Ricky Ponting</p>
+                    <p class="main-time">Jan 21, 2024, 22:15:35</p>
                 </div>
-                <p class="player-country">New Zealand</p>
-                <p class="player-score">249</p>
+                <p class="player-country">AUS</p>
+                <p class="player-score">71</p>
                 <div class="scoreboard-btn-container">
 
                     <button>+5</button>
